[package]
name = 'cord-primitives'
version = "0.8.0"
authors = ['Dhiway Networks <info@dhiway.com>']
edition = '2021'
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.3.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
base58 = "0.2.0"
blake2-rfc = {version = "0.2.18", default-features = false}


sp-core = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.41"}
frame-support = { git = "https://github.com/dhiway/substrate",  default-features = false, branch = "release-v0.9.41"}
sp-runtime = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.41"}
sp-std = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.41"}

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
]