[package]
name = 'cord-rpc'
version = "0.8.0"
authors = ['Dhiway Networks <info@dhiway.com>']
edition = '2021'
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
cord-primitives = { package = "cord-primitives", path="../primitives"}
pallet-transaction-payment-rpc = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sc-chain-spec = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sc-client-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sc-consensus-babe = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sc-consensus-babe-rpc = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sc-consensus-epochs = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sc-finality-grandpa = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sc-finality-grandpa-rpc = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sc-rpc = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sc-rpc-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sc-rpc-spec-v2 = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sc-sync-state-rpc = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sc-transaction-pool-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sp-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sp-block-builder = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sp-blockchain = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sp-consensus = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sp-consensus-babe = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sp-keystore = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sp-runtime = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
state-trie-migration-rpc = { package = "substrate-state-trie-migration-rpc", git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
