[package]
name = 'cord-rpc'
version = "0.8.1"
authors = ['Dhiway Networks <info@dhiway.com>']
edition = '2021'
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
cord-primitives = { package = "cord-primitives", path="../primitives"}
pallet-transaction-payment-rpc = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-chain-spec = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-client-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-consensus-babe = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-consensus-babe-rpc = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-consensus-grandpa = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-consensus-grandpa-rpc = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-rpc = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-rpc-spec-v2 = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-sync-state-rpc = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-transaction-pool-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-block-builder = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-blockchain = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-consensus = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-consensus-babe = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-keystore = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-runtime = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
state-trie-migration-rpc = { package = "substrate-state-trie-migration-rpc", git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
